fix overflowing filter div

--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,7 @@ body {
     background:url("./assets/images/bg-light.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
+    height: 100vh;
 }
 
 
@@ -57,6 +58,9 @@ body {
     margin: 0;
 }
 #filter {
+    position: absolute;
+    top:0;
+    left:0;
     width: 100%;
     height: 100%;
     backdrop-filter: blur(3px);
@@ -88,7 +92,6 @@ body {
 #window {
     animation: 0.6s ease-in-out 0s 1 fadeItemIn;
     max-width: 52em;
-    top: 10em;
     height: fit-content;
     padding: 0;
     margin: 0;
